# michet

./: CMakeLists.txt  COPYING  README
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  elf.c  generators.l  generators.y  michet.c  utils.c  write-asm.c
src/lib/generators/_core/: return
src/lib/generators/sys/: exit
src/lib/generators/x86_64/_core/: print
src/lib/generators/x86_64/sys/: exit
src/lib/include/michet/: asm-x86.h  elf.h  michet.h  utils.h  version.h.cmake  write-asm.h
src/samples/: Makefile  exit.s  hello.s
